# fastapi_templatle

./: README.md  pyproject.toml
app/: main.py
app/api/: main.py
