[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Brayan Stivens Sepulveda Molina <brayanstivens66@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-jose = "^3.3.0"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
